Upload video BG test

--- a/index.html
+++ b/index.html
@@ -2,3 +2,7 @@
 layout: default
 ---
 <h1>{{ site.data.site.title }}</h1>
+
+<div class="vimeo-wrapper">
+  <iframe id="vimeo_player" src="https://player.vimeo.com/video/185239002?title=0&amp;byline=0&amp;portrait=0&amp;color=d01e2f&amp;autoplay=1&loop=1&player_id=vimeo_player" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+</div>
