--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 ---
 layout: default
 ---
-<h1>{{ site.data.site.title }}</h1>
-
-<a class="block pop-up-link" href="#" data-vimeo-link="https://player.vimeo.com/video/183719479">Camp Ozanam</a>
-<a class="block pop-up-link" href="#" data-vimeo-link="https://player.vimeo.com/video/224391957">Norway Lake</a>
-
-
-<div>
-  <iframe class="vimeo-pop-up" src="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-</div>
-
-<!-- ?autoplay=1&color=2c8Bd9&title=0&byline=0&portrait=0 -->
-
-{% for work in site.work %}
-  <div class="{{ work.title | downcase | replace: ' ', '-' }}">
-    <h2>{{ work.title }}</h2>
-    <p>{{ work.meta }}</p>
+{% include patterns/banners/vimeo-banner.liquid title=site.data.home.banner.title img=site.data.home.banner.img %}
+<section id="work">
+  <h2 class="hidden">Work</h2>
+  <div class="grid">
+    {% for video in site.work %}
+    {% if video.active == true %}
+    <div class="unit [ xs-1 m-1-2 ] video-preview">
+      <a class="block embed embed-16by9 video-player-link" href="#video-player" data-video-link="{{ video.vimeo }}" aria-label="Select to play the video created for {{ video.title }}">
+        <img class="embed-item" src="{{ video.img }}" alt="">
+        <h3 class="line-highlight absolute pin-c push-0 text-fff text-upper">{{ video.title }}</h3>
+      </a>
+    </div>
+    {% endif %}
+    {% endfor %}
   </div>
-{% endfor %}
+</section>
