--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
     {% if video.active == true %}
     <div class="unit [ xs-1 m-1-2 ] video-preview">
       <a class="block embed embed-2by1 video-player-link" href="#video-player" data-video-link="{{ video.vimeo }}" aria-label="Select to play the video created for {{ video.title }}">
-        <img class="embed-item" src="{{ video.img }}" alt="">
+        <img class="embed-item" src="{{ video.thumbnail }}" alt="">
         <h3 class="line-highlight absolute pin-c push-0 text-fff text-center text-upper">{{ video.title }}</h3>
       </a>
     </div>
