Add proper reel link

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-{% include patterns/banners/vimeo-banner.liquid title=site.data.home.banner.title img=site.data.home.banner.img video=site.data.home.banner.video %}
+{% include patterns/banners/vimeo-banner.liquid title=site.data.home.banner.title img=site.data.home.banner.img video=site.data.home.banner.video reel=site.data.home.reel.video %}
 <section id="work" class="push-2">
   <h2 class="hidden">Work</h2>
   <div class="grid">
